--- a/component/module_home/src/main/res/layout/home_page_fragment_layout.xml
+++ b/component/module_home/src/main/res/layout/home_page_fragment_layout.xml
@@ -1,29 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/ll_home"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorBackground"
     android:orientation="vertical">
 
-
-    <TextView
-        android:id="@+id/tv_home_value"
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:gravity="center"
-        android:text="@string/app_name"
-        android:textSize="25dp"></TextView>
-
-    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
-        android:id="@+id/swipe_recovery_box"
+        android:background="@color/color_white"
+        >
+        <com.google.android.material.tabs.TabLayout
+            android:id="@+id/project_tab"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:tabTextColor="@color/font_hint"
+            app:tabSelectedTextColor="@color/colorPrimary"
+            app:tabIndicatorColor="@color/colorAccent"
+            app:tabGravity="center"
+            app:tabMode="fixed"
+            >
+        </com.google.android.material.tabs.TabLayout>
+    </FrameLayout>
+    <androidx.viewpager.widget.ViewPager
+        android:id="@+id/view_pager_project"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1">
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rc_recovery_box"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:divider="@null" />
-    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+        android:layout_weight="1"
+        >
+    </androidx.viewpager.widget.ViewPager>
 </LinearLayout>
