--- a/component/module_home/src/main/res/layout/item_knowledge_layout.xml
+++ b/component/module_home/src/main/res/layout/item_knowledge_layout.xml
@@ -1,31 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/bg_press_color_white"
-    android:orientation="vertical">
+    android:layout_marginStart="@dimen/dp_4"
+    android:layout_marginTop="@dimen/dp_4"
+    android:layout_marginEnd="@dimen/dp_4"
+    android:layout_marginBottom="@dimen/dp_4"
+    app:cardBackgroundColor="@color/viewBackground"
+    app:cardCornerRadius="@dimen/dp_8"
+    app:cardElevation="@dimen/dp_3">
 
-    <TextView
-        android:id="@+id/tv_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginRight="16dp"
-        android:textColor="@color/text_black"
-        android:textSize="@dimen/sp_15"
-        tools:text="公众号文章列表强势上线" />
-
-    <com.google.android.flexbox.FlexboxLayout
-        android:id="@+id/fbl"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="11dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginRight="11dp"
-        android:layout_marginBottom="11dp"
-        app:flexWrap="wrap" />
+        android:layout_height="match_parent">
+        <TextView
+            android:id="@+id/tv_knowledge_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="@dimen/dp_10"
+            android:text="author"
+            android:textSize="@dimen/sp_16"
+            android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            />
+        <mao.com.flexibleflowlayout.TagFlowLayout
+            android:id="@+id/flow_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingBottom="@dimen/dp_8"
+            android:paddingStart="@dimen/dp_8"
+            app:layout_constraintTop_toBottomOf="@id/tv_knowledge_title"
+            >
+        </mao.com.flexibleflowlayout.TagFlowLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
-</LinearLayout>
+</androidx.cardview.widget.CardView>
